@@ -122,46 +122,72 @@ public class MyEducation {
 		// fileHandler.close();
 		// logger.getHandlers()[0].close();
 		// ====================================================================================
-		int[] a = new int[] { 1, 9 };
-		int[] b = new int[6];
-		System.arraycopy(a, 0, b, 0, a.length);
-		for (int i : b) {
-			System.out.println(i);
-		}
-		for (int i : a) {
-			System.out.println(i);
-		}
+		// int[] a = new int[] { 1, 9 };
+		// int[] b = new int[6];
+		// System.arraycopy(a, 0, b, 0, a.length);
+		// for (int i : b) {
+		// System.out.println(i);
+		// }
+		// for (int i : a) {
+		// System.out.println(i);
+		// }
 
-		ArrayList<Integer> list = new ArrayList<Integer>();
-		list.add(48);
-		for (Object i : list) {
-			System.out.println(i);
-		}
-		StringBuilder f = new StringBuilder("a");
-		StringBuilder g = new StringBuilder("f");
-		StringBuilder h = new StringBuilder("g");
-		StringBuilder[] arr = new StringBuilder[] { f, g, h };
-		List<StringBuilder> array = Arrays.asList(arr);
-		for (StringBuilder stringBuilder : array) {
-			System.out.println(stringBuilder);
-		}
-		Character value = null;
-		List<Character> list1 = new ArrayList<Character>();
-		// Character[] arr1 = new Character[] { 'E', 'l', 'e', 'n', 'a' };
-		// list1 = Arrays.asList(arr1);
-		list1.add('E');
-		list1.add('l');
-		list1.add('e');
-		list1.add('n');
-		list1.add('a');
-		System.out.println(list1);
-		list1.remove(1);
-		List<Character> list2 = List.copyOf(list1);
-		System.out.println(list2);
+		// ArrayList<Integer> list = new ArrayList<Integer>();
+		// list.add(48);
+		// for (Object i : list) {
+		// System.out.println(i);
+		// }
+		// StringBuilder f = new StringBuilder("a");
+		// StringBuilder g = new StringBuilder("f");
+		// StringBuilder h = new StringBuilder("g");
+		// StringBuilder[] arr = new StringBuilder[] { f, g, h };
+		// List<StringBuilder> array = Arrays.asList(arr);
+		// for (StringBuilder stringBuilder : array) {
+		// System.out.println(stringBuilder);
+		// }
+		// Character value = null;
+		// List<Character> list1 = new ArrayList<Character>();
+		// // Character[] arr1 = new Character[] { 'E', 'l', 'e', 'n', 'a' };
+		// // list1 = Arrays.asList(arr1);
+		// list1.add('E');
+		// list1.add('l');
+		// list1.add('e');
+		// list1.add('n');
+		// list1.add('a');
+		// System.out.println(list1);
+		// list1.remove(1);
+		// List<Character> list2 = List.copyOf(list1);
+		// System.out.println(list2);
+		// ====================================================================================
+		// private static String getType(Object o) {
+		// return o.getClass().getName();
+		// }
+		// ====================================================================================
+		// List<Integer> list = new ArrayList<Integer>();
+		// for (int i = 0; i < 5; i++) {
+		// list.add(1);
+		// }
+		// list.add(2, 2);
+		// list.add(2, 3);
+		// list.set(0, 4);
+		// list.remove(list.size() - 1);
+		// System.out.println(list);
 
+		// int[] a = new int[5];
+		// for (int i = 0; i < a.length; i++) {
+		// a[i] = 1;
+		// }
+
+		// for (int i : a) {
+		// System.out.printf(i + ",");
+		// }
+
+		LinkedList<Integer> list = new LinkedList<Integer>();
+		list.add(0, 2);
+		list.add(1, 3);
+		list.add(2, 2);
+		list.set(0, 4);
+		list.remove(list.size() - 1);
+		System.out.println(list);
 	}
-
-	// private static String getType(Object o) {
-	// return o.getClass().getName();
-	// }
 }
